--- a/src/main/resources/il/ac/haifa/cs/sweng/HelloGit/about_dialog.fxml
+++ b/src/main/resources/il/ac/haifa/cs/sweng/HelloGit/about_dialog.fxml
@@ -20,7 +20,7 @@
 	</Label>
 	<Label alignment="CENTER"
 		   maxWidth="2.7976931348623157E308"
-		   text="Sheikh"
+		   text="Sheikh2"
 		   textAlignment="CENTER"
 		   VBox.vgrow="ALWAYS">
 		<font>
